welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: expected class or object definition
def fonctionTest() : Boolean={
^ColumnByColumn:14: error: expected class or object definition
def Colonne(){
^ColumnByColumn:21: error: Unmatched closing brace '}' ignored here
  }} 
   ^